# beets-multivalue

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
beetsplug/: multivalue.py  virtual-multivalue.py
tests/: test_multivalue.py
