[tool.mypy]
follow_untyped_imports = true

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beetsplug"]

[project]
name = "beets-multivalue"
version = "0.0.1"
authors = [
  { name="Eric MASSERAN"},
]
description = "A beet plugin to use multi values on strings."
# readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
